[tool.poetry]
name = "t5_pretrain"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.5.0"
t5 = {extras = ["gcp"], version = "^0.9.1"}
mesh-tensorflow = "^0.1.19"
tensorflow-datasets = "^4.3.0"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]
autopep8 = ">=1.5.4"
flake8 = ">=3.8.4"
isort = ">=5.6.4"
mypy = ">=0.790"
yamllint = ">=1.25.0"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
